[FIX] web: List: display invisible cells
An invisible cell should be visible in the list renderer otherwise
the cells are not correctly aligned anymore.

--- a/addons/web/static/src/less/list_view.less
+++ b/addons/web/static/src/less/list_view.less
@@ -99,6 +99,9 @@
         &.o_list_text, &.o_field_text {
             white-space: pre-wrap;
         }
+        &.o_invisible_modifier {
+            display: initial!important;  // Override invisible to keep the cells aligned
+        }
     }
 
     //--------------------------------------------------------------------------
